install/resources/observatorium/operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: <namespace>
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: observatorium-operator
    app.kubernetes.io/name: observatorium-operator
    app.kubernetes.io/part-of: observatorium
    control-plane: observatorium-operator
  name: observatorium-operator
  namespace: <namespace>
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      control-plane: observatorium-operator
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        control-plane: observatorium-operator
    spec:
      containers:
        - args:
            - --log-level=debug
          image: quay.io/observatorium/observatorium-operator:latest
          imagePullPolicy: Always
          name: observatorium-operator
          resources:
            limits:
              cpu: 100m
              memory: 600Mi
            requests:
              cpu: 100m
              memory: 600Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: observatorium-operator
      serviceAccountName: observatorium-operator
      terminationGracePeriodSeconds: 10
