install/resources/observatorium/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: observatorium
  namespace: <namespace>
spec:
  host: observatorium-observatorium.apps-crc.testing
  to:
    kind: Service
    name: observatorium-xyz-observatorium-api
    weight: 100
  port:
    targetPort: public
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
